# ot-wf-results-gen

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml
cascoda/: Makefile  config-editor.sh  extract_stats.py  generate_report.py  hdn_detector.py  whitefield.py
config/: wf_ot_v1_8.cfg  wf_ot_v1_8_register_whitefield.cfg
